--- a/index.html
+++ b/index.html
@@ -2,17 +2,22 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Hello, World! - A-Frame</title>
-    <meta name="description" content="Hello, World! - A-Frame">
-    <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
+    <title>Simple 360 VR Experience</title>
+    <meta name="description" content="Simple 360 VR Experience - A-Frame">
+    <script src="https://aframe.io/releases/0.6.0/aframe.min.js"></script>
   </head>
   <body>
     <a-scene>
-      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-      <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-      <a-sky color="skyblue"></a-sky>
+      <a-assets>
+        <img src="assets/Rainforest.jpg" id="forest">
+        <img src="assets/Market.jpg" id="market">
+        <img src="assets/Castle.jpg" id="castle">
+
+      </a-assets>
+      <a-image src="#forest" position="-1.5 1.8 -3"></a-image>
+      <a-image src="#market" position="0 1.8 -3"></a-image>
+      <a-image src="#castle" position="1.5 1.8 -3"></a-image>
+      <a-sky src="#castle"></a-sky>
     </a-scene>
   </body>
 </html>
